--- a/Sales.WEB/Shared/NavMenu.razor
+++ b/Sales.WEB/Shared/NavMenu.razor
@@ -20,8 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="/countries">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Países
+            </NavLink>
+            <NavLink class="nav-link" href="/categories">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Categorías
             </NavLink>
         </div>
     </nav>
