--- a/Sales.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Sales.WEB/Pages/Countries/CountriesIndex.razor
@@ -4,13 +4,13 @@
 
 <h3>Países</h3>
 
-@if (Countries is null)
-{
-    <p>Cargando...</p>
-}
-else
-{
-    <table class="table table-striped">
+<GenericList MyList="Countries">
+
+    <Loading>
+        <p>Cargando...</p>
+    </Loading>
+    <Body>
+        <table class="table table-striped">
             <thead>
                 <tr>
                     <th></th>
@@ -18,7 +18,7 @@ else
                 </tr>
             </thead>
             <tbody>
-                @foreach (var country in Countries)
+                @foreach (var country in Countries!)
                 {
                     <tr>
                         <td>
@@ -28,12 +28,13 @@ else
                         <td>
                             @country.Name
                         </td>
-                    </tr>   
+                    </tr>
                 }
             </tbody>
         </table>
+    </Body>
+</GenericList>
 
-}
 
 @code {
     public List<Country>? Countries { get; set; }
