implement CountryForm and CategoryForm generic. Implement CountryCreate and CategoryCreate. Too library SweetAlertService

--- a/Sales.WEB/Pages/Categories/CategoriesIndex.razor
+++ b/Sales.WEB/Pages/Categories/CategoriesIndex.razor
@@ -3,11 +3,9 @@
 
 <h3>Categorías</h3>
 
-<GenericList MyList="Categories">
-    <Loading>
-        <p>Cargando...</p>
-    </Loading>
+<a class="btn btn-primary mb-3" href="/categories/create">Nueva Categoría</a>
 
+<GenericList MyList="Categories">
     <Body>
         <table class="table table-striped">
             <thead>
