--- a/Sales.WEB/Pages/Countries/CountriesIndex.razor
+++ b/Sales.WEB/Pages/Countries/CountriesIndex.razor
@@ -4,11 +4,9 @@
 
 <h3>Países</h3>
 
-<GenericList MyList="Countries">
+<a class="btn btn-primary mb-3" href="/countries/create">Nuevo País</a>
 
-    <Loading>
-        <p>Cargando...</p>
-    </Loading>
+<GenericList MyList="Countries">
     <Body>
         <table class="table table-striped">
             <thead>
