Finish Countries and Categories CRUD

--- a/Sales.WEB/Pages/Categories/CategoryCreate.razor
+++ b/Sales.WEB/Pages/Categories/CategoryCreate.razor
@@ -21,12 +21,12 @@
             return;
         }
 
-        categoryForm!.FormPostedSuccessfully = true;
-        navigationManager.NavigateTo("/categories");
+        Return();
     }
 
     private void Return()
     {
+        categoryForm!.FormPostedSuccessfully = true;
         navigationManager.NavigateTo("/categories");
     }
 
