--- a/Sales.WEB/Pages/Categories/CategoriesIndex.razor
+++ b/Sales.WEB/Pages/Categories/CategoriesIndex.razor
@@ -5,7 +5,23 @@
 
 <h3>Categorías</h3>
 
-<a class="btn btn-primary mb-3" href="/categories/create">Nueva Categoría</a>
+<div class="mb-2" style="display: flex; flex-wrap:wrap; align-items: center;">
+    <div>
+        <a class="btn btn-primary" href="/countries/create">Nueva Categoria</a>
+    </div>
+    <div class="mx-2">
+        <input style="width: 400px;" type="text" class="form-control" id="titulo" placeholder="Buscar país..." @bind-value="Filter" />
+    </div>
+    <div>
+        <button type="button" class="btn btn-outline-primary" @onclick="ApplyFilterAsync">Filtrar</button>
+        <button type="button" class="btn btn-outline-danger" @onclick="CleanFilterAsync">Limpiar</button>
+    </div>
+</div>
+
+<Pagination CurrentPage="currentPage"
+            TotalPages="totalPages"
+            SelectedPage="SelectedPageAsync" />
+
 
 <GenericList MyList="Categories">
     <Body>
@@ -14,6 +30,7 @@
                 <tr>
                     <th></th>
                     <th>Categoría</th>
+                    <th style="width:260px"></th>
                 </tr>
             </thead>
             <tbody>
@@ -35,17 +52,54 @@
 </GenericList>
 
 @code {
+    private int currentPage = 1;
+    private int totalPages;
     public List<Category>? Categories { get; set; }
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Page { get; set; } = string.Empty;
+
+    [Parameter]
+    [SupplyParameterFromQuery]
+    public string Filter { get; set; } = string.Empty;
 
     protected override async Task OnInitializedAsync()
     {
         await LoadAsync();
     }
 
-    private async Task LoadAsync()
+    private async Task LoadAsync(int page = 1)
     {
-        var responseHttp = await repository.Get<List<Category>>("/api/categories");
-        Categories = responseHttp.Response;
+        if (!string.IsNullOrWhiteSpace(Page))
+        {
+            page = Convert.ToInt32(Page);
+        }
+
+        string url1 = string.Empty;
+        string url2 = string.Empty;
+
+        if (string.IsNullOrEmpty(Filter))
+        {
+            url1 = $"api/categories?page={page}";
+            url2 = $"api/categories/totalPages";
+        }
+        else
+        {
+            url1 = $"api/categories?page={page}&filter={Filter}";
+            url2 = $"api/categories/totalPages?filter={Filter}";
+        }
+
+        var responseHttp = await repository.Get<List<Category>>(url1);
+        var responseHttp2 = await repository.Get<int>(url2);
+        Categories = responseHttp.Response!;
+        totalPages = responseHttp2.Response!;
+    }
+
+    private async Task SelectedPageAsync(int page)
+    {
+        currentPage = page;
+        await LoadAsync(page);
     }
 
     private async Task DeleteAsync(int id)
@@ -78,5 +132,18 @@
         }
 
         await LoadAsync();
+    }
+
+    private async Task CleanFilterAsync()
+    {
+        Filter = string.Empty;
+        await ApplyFilterAsync();
+    }
+
+    private async Task ApplyFilterAsync()
+    {
+        int page = 1;
+        await LoadAsync(page);
+        await SelectedPageAsync(page);
     }
 }
